# coding-exercises

ai-exercise/: README.md  docker-compose.yml  pyproject.toml
ai-exercise/_base/: base.py  context.py  session.py
ai-exercise/_dao/: ABCDAO.py  CompaniesDimDAO.py  CompletionsFactDAO.py  ContactsDimDAO.py  PromptConfigDAO.py  __init__.py
ai-exercise/_data_models/: __init__.py  base.py  companies_dim.py  company_entities_dim.py  completions_fact.py  contacts_dim.py  dq_completions_fact.py  prompt_config.py
ai-exercise/business_card_reader/: BusinessCardPipeline.py  __init__.py  __main__.py
ai-exercise/migrations/: V1__initialize_tables.sql  V2__insert_prompt.sql
ai-exercise/tests/: conftest.py
ai-exercise/tests/factories/: table.py
ai-exercise/tests/fixtures/: __init__.py  data.py  db.py
ai-exercise/tests/unit/: test_business_card_pipeline.py
mobile/map-locations/: README.md
